tests/src/frontend/typechecking/invalid/tunder_generic_3.sk
base class Foo<T>
class Bar() extends Foo<_>
